test/fixtures/diagnostics/type-checker/negative/extension-property-nullable-receiver/input.tysh
namespace Samples.Extensions.NullableReceiver

public extension string? text {
  public let Normalized: string = ""
}

public extension int? value {
  public let ValueOrZero: int = 0
}
